--- a/cryptoTracker/package.json
+++ b/cryptoTracker/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite build ",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite"
   },
   "dependencies": {
     "axios": "^1.6.3",
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-script": "^2.0.5",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
